--- a/View/style.css
+++ b/View/style.css
@@ -2,7 +2,10 @@ body
 {
 	font-family: arial ;
 	font-size: 15px ;
-	background: url(images/bg.png) ;
+	background: url(images/bg.jpg) ;
+	background-attachment: fixed ;
+	background-size: 100% 100% ;
+	color: white ;
 }
 
 #logInForm
@@ -23,10 +26,122 @@ body
 	border-radius: 10px ;
 	-moz-border-radius: 10px ;
 	-webkit-border-radius: 10px ;
-	background: rgba(255, 255, 255, 0.6) ;
-	color: black ;
+	background: rgba(0, 0, 0, 0.8) ;
+	color: white ;
+	padding: 10px ;
+	float: left ;
+}
+
+#menu
+{
+	width: 1024px ;
+	background: url(images/menu_bg.png) ;
+	border-radius: 5px ;
+	-moz-border-radius: 5px ;
+	-webkit-border-radius: 5px ;
+	font-weight: bold ;
+	margin-top: 0px ;
+	
+}
+
+#menu ul
+{
+	list-style: none ;
+	padding-top: 12px ;
+	padding-bottom: 12px ;
+}
+
+#menu ul li
+{
+	display: inline ;
+	padding-top: 8px ;
+	padding-bottom: 8px ;
+	padding-left: 15px ;
+	padding-right: 19px ;
+}
+
+#menu ul li:hover
+{
+	cursor: pointer ;
+	background: #666666 ;
+	border-top-color: #333333 ;
+	border-left-color: #333333 ;
+	border-top-style: solid ;
+	border-left-style: solid ;
+	border-top-width: 2px ;
+	border-left-width: 2px ;
+	text-shadow: 2px 2px #333333 ;
+}
+
+#side_menu
+{
+	border-top-color: #777777 ;
+	border-top-width: 2px ;
+	border-top-style: solid ;
+	border-left-color: #777777 ;
+	border-left-width: 2px ;
+	border-left-style: solid ;
+	background: url(images/side_menu_bg.jpg) ;
+	background-size: 100% 100% ;
+	width: 200px ;
+	border-radius: 7px ;
+	-moz-border-radius: 7px ;
+	-webkit-border-radius: 7px ;
+	color: white ;
+	float: left ;
+}
+
+#side_menu ul
+{
+	list-style: none ;
 	padding: 10px ;
 }
+
+#side_menu ul li
+{
+	text-align: center ;
+	padding-top: 10px ;
+	padding-bottom: 10px ;
+}
+
+#side_menu ul li:hover
+{
+	text-decoration: underline ;
+	font-weight: bold ;
+	cursor: pointer ;
+}
+
+#header
+{
+	margin-bottom: 0px ;
+}
+
+#header p
+{
+	position: relative ;
+	top: -80px ;
+	left: 400px ;
+	font-size: 25px ;
+	font-weight: bold ;
+	margin-bottom: 0px ;
+}
+
+#main
+{
+	width: 800px ;
+	float: left ;
+	padding-left: 20px ;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
