--- a/View/style.css
+++ b/View/style.css
@@ -10,19 +10,19 @@ body
 
 #logInForm
 {
-	position: absolute ;
-	top: 200px ;
-	left: 200px ;
+	
 	padding: 30px ;
+	width: 26% ;
 	border-radius: 12px ;
 	-moz-border-radius: 12px ;
 	-webkit-border-radius: 12px ;
 	background: #aaaaaa ;
+	margin: 20% 37%;
 }
 
 #container
 {
-	width: 1024px ;
+	width: 98% ;
 	border-radius: 10px ;
 	-moz-border-radius: 10px ;
 	-webkit-border-radius: 10px ;
@@ -30,11 +30,12 @@ body
 	color: white ;
 	padding: 10px ;
 	float: left ;
+	margin-top: 50px ;
 }
 
 #menu
 {
-	width: 1024px ;
+	width: 100% ;
 	background: url(images/menu_bg.png) ;
 	border-radius: 5px ;
 	-moz-border-radius: 5px ;
@@ -83,7 +84,7 @@ body
 	border-left-style: solid ;
 	background: url(images/side_menu_bg.jpg) ;
 	background-size: 100% 100% ;
-	width: 200px ;
+	width: 20% ;
 	border-radius: 7px ;
 	-moz-border-radius: 7px ;
 	-webkit-border-radius: 7px ;
@@ -128,7 +129,7 @@ body
 
 #main
 {
-	width: 800px ;
+	width: 78% ;
 	float: left ;
 	padding-left: 20px ;
 }
