css table background on selection changed

--- a/Bootstrap/css/style.css
+++ b/Bootstrap/css/style.css
@@ -24,8 +24,8 @@ html, body{
 }
 
 .row_selected{
-	background-color: red;
-    /*color:red;*/
+	/*background-color: red;*/
+    color:red;
 }
 
 .next {
